--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </ol>
     <h1>This is a space to WhiteTiger</h1>
     <strong>Hi, my name is <u>wontak</u>.</strong>
-    <img src="/images/intro.jpg", width="100%">
+    <img src="images/intro.jpg", width="100%">
 </body>
 </html> 
