--- a/tag.html
+++ b/tag.html
@@ -1,25 +1,123 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<head>
 
-    </head>
-    <body>
-        <dl>
-            <dt>&lt;!--...--&gt;</dt>
-            <dd>Defines a comment.</dd>
-            <dd>주석처리</dd>
-            <hr/>
-            
-            <dt>&lt;!DOCTYPE&gt;</dt>
-            <dd>Difines the document type.</dd>
-            <dd>HTML5</dd>
-            <dd>&lt;!DOCTYPE html&gt;</dd>
-            <hr/>
+</head>
 
-            <dt>&lt;a&gt;</dt>
-            <dd>It defines a hyperlink, which is used to link form one page th another.</dd>
-            <dd>The most important attribute of the &lt;a&gt; element is th href attribute, which indicates the link's destination.</dd>
-            <dd>href = hypertext reference</dd>
-        </dl>
-    </body>
-</html>
+<body>
+    <a href="all_tag.html">모든 태그정보를 보려면 click.</a>
+    <h3>Tag Ranking</h3>
+    <img src="images/html_tag_ranking.png">
+
+    <style>
+        dt {
+            font-weight:bolder;
+        }
+    </style>
+
+    <dl>
+        <dt>&lt;html&gt;</dt>
+        <dd></dd>
+        <hr />
+        
+        <dt>&lt;head&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;body&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;title&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;meta&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;div&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;a&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;script&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;link&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;img&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;span&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;p&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;li&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;ul&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;style&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;br&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;h1&gt; to &lt;h6&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;input&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;form&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;nav&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;header&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;footer&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;ifame&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;strong&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;button&gt;</dt>
+        <dd></dd>
+        <hr />
+
+        <dt>&lt;i&gt;</dt>
+        <dd></dd>
+        <hr />
+
+    </dl>
+</body>
