--- a/web.html
+++ b/web.html
@@ -5,19 +5,31 @@
     </head>
 
     <body>
+        <style>
+ 
+        </style>
         <ul>
-            <li><strong>Web_basic</strong>
+            <strong><li>HTML_basic</strong>
                 <ol>
-                    <li><a href="tag.html">Tag</a></li>
-                    <li>Attribute</li>
+                    <li><a href="tag.html">태그</a></li>
+                    <li>속성</li>
                 </ol>
             </li>
             <hr />
-            <li><strong>None</strong>
+
+            <strong><li>CSS</strong>
                 <ol>
                     <li></li>
                 </ol>
             </li>
+            <hr />
+
+            <strong><li>Java Script</strong>
+                <ol>
+                    <li></li>
+                </ol>
+            </li>
+
         </ul>
     </body>
 </html>
