--- a/tag.html
+++ b/tag.html
@@ -3,10 +3,10 @@
 
 </head>
 
-<body>
+<body style="background-color: white;">
     <a href="all_tag.html">모든 태그정보를 보려면 click.</a>
     <h3>Tag Ranking</h3>
-    <img src="images/html_tag_ranking.png">
+    <img src="images/html_tag_ranking.png" width="500px;" height="800px;">
 
     <style>
         dt {
@@ -36,7 +36,9 @@
         <hr />
 
         <dt>&lt;div&gt;</dt>
-        <dd></dd>
+        <dd>
+            무색 무취의 태그 : block
+        </dd>
         <hr />
 
         <dt>&lt;a&gt;</dt>
@@ -56,7 +58,9 @@
         <hr />
 
         <dt>&lt;span&gt;</dt>
-        <dd></dd>
+        <dd>
+            무색 무취의 태그 : inline
+        </dd>
         <hr />
 
         <dt>&lt;p&gt;</dt>
