--- a/index.html
+++ b/index.html
@@ -5,15 +5,71 @@
     <meta charset="utf-8">
 </head>
 
+<style>
+    body {
+        background-color: white;
+        margin: 0;
+    }
+
+    h1 {
+        border-bottom: 20px solid gainsboro ; border-top: 20px solid gainsboro ;
+        margin:0; padding:50px;
+        font-size: 500%;
+        text-align: center;    
+    }
+  
+    li {
+        margin-bottom:10px; 
+        font-size: 20px;
+    }
+
+    a {
+        text-decoration-line: none; 
+        color: gray;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    #grid {
+        display: grid; grid-template-columns: 290px 1fr; 
+        font-size: 20px;
+    }
+
+    #grid ol {
+        border-right:1px solid gray; 
+        width:250px; 
+        margin:0; margin-top: 20px; 
+        color:gray;
+    }
+
+    #grid p {
+        margin-top: 0;
+    }
+
+</style>
+
+
 <body>
-    <ol>
-        <li><a href="web.html">Web Hacking</a></li>
-        <li><a href="network.html">Network Hacking</a></li>
-        <li><a href="pwnable.html">System Hacking</a></li>
-        <li><a href="app.html">Application Hacking</a></li>
-    </ol>
-    <h1>This is a space to WhiteTiger</h1>
-    <strong>Hi, my name is <u>wontak</u>.</strong>
-    <img src="images/intro.jpg", width="100%">
+    <h1>This Is A Space To WhiteTiger</h1>
+    <div id="grid">
+        <ol>
+            <li><a href="web.html">Web Hacking</a></li>
+            <li><a href="network.html">Network Hacking</a></li>
+            <li><a href="pwnable.html">System Hacking</a></li>
+            <li><a href="app.html">Application Hacking</a></li>
+        </ol>
+        <div style="margin:20px;">
+            <p><strong>Hi, my name is <u style="color:gray;">WonTak</u>.<br>
+                Wellcome to visit my space. I'm a begginer hacker. This is my first web page. 
+                I can't speak English well. So, usually using the papago program. 
+                If my sentence isn't correct, I hope you enjoy it. 
+                This space will be including infomations for hacking.
+                I hope my studies will help you, too. umm.... <u style="color:gray;">Good Luck!</u>
+            </strong></p>
+            <img src="/images/coding.jpg">
+        </div>
+    </div>
 </body>
 </html> 
