--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 This space will be including infomations for hacking.
                 I hope my studies will help you, too. umm.... <u style="color:gray;">Good Luck!</u>
             </strong></p>
-            <img src="images/coding.jpg">
+            <img src="coding.jpg">
         </div>
     </div>
 </body>
