--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             margin: 20px;
         }
 
-        @media (min-width: 320px) and (max-width: 500px) {
+        @media (max-width: 480px) {
             h1 {
                 border-bottom: 10px solid gainsboro ; border-top: 10px solid gainsboro ;
                 padding:20px;
