--- a/web.html
+++ b/web.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>web</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
-        <style>
- 
-        </style>
+    <body class="ListAll">
         <ul>
-            <strong><li>HTML_basic</strong>
-                <ol>
-                    <li><a href="tag.html">태그</a></li>
-                    <li>속성</li>
-                </ol>
+            <li class="ListAll_list">WEB-BASIC
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
             </li>
-            <hr />
-
-            <strong><li>CSS</strong>
-                <ol>
+            <li class="ListAll_list">WEB-HACKING
+                <ul>
                     <li></li>
-                </ol>
+                </ul>
             </li>
-            <hr />
-
-            <strong><li>Java Script</strong>
-                <ol>
-                    <li></li>
-                </ol>
-            </li>
-
         </ul>
     </body>
 </html>
