--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div class="intro">
         <ul>
             <li><a href="web.html">Web Hacking</a></li>
-            <li><a href="network.html">Network Hacking</a></li>
             <li><a href="pwnable.html">System Hacking</a></li>
-            <li><a href="app.html">Application Hacking</a></li>
+            <li><a href="reversing.html">Reverse Engineering</a></li>
+            <li><a href="mobile.html">Mobile Hacking</a></li>
+            <li><a href="cryptography.html">Cryptography</a></li>
+            <li><a id="secretLink" href="myspace.html">Secret Link</a></li>
         </ul>
         <div>
             <p>Hi, my name is WonTak.<br>
