--- a/web.html
+++ b/web.html
@@ -7,19 +7,22 @@
     </head>
 
     <body class="ListAll">
+        <div class="Home">
+            <input type="button" value="Home" onclick="location.href='index.html';"></div>
         <ul>
             <li class="ListAll_list">WEB-BASIC
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
+                    <li><a href="https://www.w3schools.com/html/default.asp">HTML</a></li>
+                    <li><a href="https://www.w3schools.com/css/default.asp">CSS</a></li>
+                    <li><a href="https://www.w3schools.com/js/default.asp">JavaScript</a></li>
                 </ul>
             </li>
             <li class="ListAll_list">WEB-HACKING
                 <ul>
-                    <li></li>
+                    <li><a href="https://webhacking.kr/">webhacking.kr</a></li>
+                    <li><a href="http://pwnable.kr/index.php">pwnable.kr</a></li>
                 </ul>
-            </li>
+            </li>            
         </ul>
     </body>
 </html>
